# AG-SpTRSV

./: CMakeLists.txt  README.md
include/: AG-SpTRSV.h  GPU_setup.h  YYSpTRSV.h  common.h  elimination.h  finalize.h  preprocessing.h  schedule.h  strategy.h  transformation.h
matrix/: Makefile  make.sh  transfer_to_tri.cpp
matrix/matrix_sample_csr/: delaunay_n13.csr
model/: model_eval.py
perf_data/: history_info.csv
scripts/: build.sh  get_info.sh  run.sh  run_search.sh
src/: SpTRSV_executor.cu  SpTRSV_executor_code.cu  common.cpp  elimination.cpp  finalize.cu  preprocessing.cu  schedule.cu
test/: Makefile  test  test.cu  test.h  test_baseline.cu  test_search  test_search.cu
utils/: utils.cpp  utils.h
